Rename company to campaign (#15)
