# targetted-back/docs/swagger.json
@@ -9,9 +9,9 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/company/": {
+        "/api/campaign/": {
             "get": {
-                "description": "get company list",
+                "description": "get campaign list",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,10 +19,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "company"
+                    "campaign"
                 ],
                 "summary": "get all companies",
-                "operationId": "getCompanyList",
+                "operationId": "getCampaignList",
                 "parameters": [
                     {
                         "description": "credentials",
@@ -40,7 +40,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.AdCompany"
+                                "$ref": "#/definitions/models.AdCampaign"
                             }
                         }
                     },
@@ -71,7 +71,7 @@
                 }
             },
             "post": {
-                "description": "create company",
+                "description": "create campaign",
                 "consumes": [
                     "application/json"
                 ],
@@ -79,10 +79,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "company"
+                    "campaign"
                 ],
-                "summary": "create company",
-                "operationId": "createCompany",
+                "summary": "create campaign",
+                "operationId": "createCampaign",
                 "parameters": [
                     {
                         "description": "credentials",
@@ -128,9 +128,9 @@
                 }
             }
         },
-        "/api/company/:id": {
+        "/api/campaign/:id": {
             "get": {
-                "description": "get company by id",
+                "description": "get campaign by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -138,10 +138,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "company"
+                    "campaign"
                 ],
-                "summary": "get company by id",
-                "operationId": "getCompanyByID",
+                "summary": "get campaign by id",
+                "operationId": "getCampaignByID",
                 "parameters": [
                     {
                         "description": "credentials",
@@ -157,7 +157,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AdCompany"
+                            "$ref": "#/definitions/models.AdCampaign"
                         }
                     },
                     "400": {
@@ -187,7 +187,7 @@
                 }
             },
             "put": {
-                "description": "update company",
+                "description": "update campaign",
                 "consumes": [
                     "application/json"
                 ],
@@ -195,10 +195,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "company"
+                    "campaign"
                 ],
-                "summary": "update company",
-                "operationId": "updateCompany",
+                "summary": "update campaign",
+                "operationId": "updateCampaign",
                 "parameters": [
                     {
                         "description": "credentials",
@@ -214,7 +214,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AdCompany"
+                            "$ref": "#/definitions/models.AdCampaign"
                         }
                     },
                     "400": {
@@ -244,9 +244,9 @@
                 }
             }
         },
-        "/api/company/:id/images/": {
+        "/api/campaign/:id/images/": {
             "get": {
-                "description": "get company images names",
+                "description": "get campaign images names",
                 "consumes": [
                     "application/json"
                 ],
@@ -254,10 +254,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "company"
+                    "campaign"
                 ],
-                "summary": "get company images names",
-                "operationId": "getCompanyImages",
+                "summary": "get campaign images names",
+                "operationId": "getCampaignImages",
                 "parameters": [
                     {
                         "description": "credentials",
@@ -499,17 +499,17 @@
                 }
             }
         },
-        "models.AdCompany": {
+        "models.AdCampaign": {
             "type": "object",
             "properties": {
                 "businessAddress": {
                     "description": "TODO RENAME",
                     "type": "string"
                 },
-                "companyField": {
+                "campaignField": {
                     "type": "string"
                 },
-                "companyName": {
+                "campaignName": {
                     "type": "string"
                 },
                 "compnayPurpose": {
